objects/FinServ__Card__c.object
<CustomObject>
    <description>Represents client financial account associated card details</description>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__AccountHolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Holder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cards</relationshipLabel>
        <relationshipName>Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__BinNumber__c</fullName>
        <label>BIN Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Financial Account Card</relationshipLabel>
        <relationshipName>FinancialAccountCard</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FinServ__OwnershipType__c</fullName>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ValidUntil__c</fullName>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <label>Card</label>
    <nameField>
        <label>Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>